--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -170,6 +170,7 @@ en:
     select another chapter:                     "Выбрать другую главу"
     view in reader:                             "Открыть %{reference} в окне чтения"
   users:
+    no connection friends:                      ""
     creation form errors:                       "Ваш аккаунт не был создан по следующим причинам:"
     profile form errors:                        "Ваш профиль не был обновлён по следующим причинам:"
     email address:                              "Адрес эл. почты"
@@ -239,7 +240,7 @@ en:
       your information title:                   "Информация, которую Вы предоставляете"
       your information text:                    "Когда Вы создаете учетную запись на YouVersion или подписываетесь на любую другую услугу или предложение LifeChurch.tv, требующее регистрации, мы запрашиваем у Вас некоторые личные данные (как то: Ваше имя и фамилия, адрес эл. почты и пароль учетной записи). Мы имеем право объединить информацию, которую Вы предоставляете в рамках Вашей учетной записи, с информацией, полученной другими сервисами LifeChurch.tv или третьими лицами, с целью повышения разнообразия и качества предоставляемых Вам услуг. В некоторых сервисах мы можем предоставить Вам возможность отказаться от объединения такой информации."
       device id title:                          "Уникальный идентификатор устройства"
-      device id text:                           При использовании Вами приложения Библия от YouVersion, мы можем сохранять Ваш Уникальный идентификатор устройства (“UDID”) и (или) IP-адрес. Мы используем Ваш UDID с целью предоставления Вам индивидуализированных возможностей использования приложения. Сбор информации о UDID осуществляется с целью определения общего числа уникальных устройств, которые используют нашу услугу или ее часть, отслеживания общего использования, анализа данных и более эффективной коммуникации с пользователями. Мы можем объединять Ваш UDID с информацией, полученной от третьих лиц, с целью предоставления Вам более интересных и качественных услуг. Мы не передаем связанную с Вашим UDID личную информацию, которая может Вас идентифицировать, третьим лицам.  
+      device id text:                           "При использовании Вами приложения Библия от YouVersion, мы можем сохранять Ваш Уникальный идентификатор устройства (“UDID”) и (или) IP-адрес. Мы используем Ваш UDID с целью предоставления Вам индивидуализированных возможностей использования приложения. Сбор информации о UDID осуществляется с целью определения общего числа уникальных устройств, которые используют нашу услугу или ее часть, отслеживания общего использования, анализа данных и более эффективной коммуникации с пользователями. Мы можем объединять Ваш UDID с информацией, полученной от третьих лиц, с целью предоставления Вам более интересных и качественных услуг. Мы не передаем связанную с Вашим UDID личную информацию, которая может Вас идентифицировать, третьим лицам."  
       cookies title:                            "Cookie-файлы LifeChurch.tv"
       cookies text:                             "При посещении Вами %{link}, мы можем отправить один или несколько cookie-файлов на Ваш компьютер, чтобы иметь возможность идентифицировать Ваш браузер. (Cookie-файл - это просто небольшой текстовый файл, содержащий последовательность символьных данных). Если Вы разрешаете прием наших cookie-файлов, Вы получаете возможность сохранять пользовательские настройки для каждого нового сеанса работы. Большинство браузеров автоматически принимают cookie-файлы, при этом Вы можете изменить настройки браузера, чтобы он блокировал все cookie-файлы или сообщал Вам, когда Вам посылают cookie-файл. Некоторые функции и сервисы YouVersion могут не работать должным образом, если у Вас отключены cookie-файлы."   
       log title:                                "Содержимое журнала"
@@ -410,6 +411,7 @@ en:
     user badges:                                "Значки %{user}"
   plans:
     title:                                      "Планы чтения"
+    browse by category:                         ""
     browse plans:                               "Просмотреть планы: %{category}"
     all:                                        "Все"
     all plans:                                  "Все планы"
@@ -468,7 +470,7 @@ en:
     search members:                             "Поиск"
     email_on:                                   "Включить отсылку писем"
     email_off:                                  "Выключить отсылку писем"
-    email delivery text:                        Включите доставку электронной почты, если хотите ежедневно получать содержимое плана чтения на свой почтовый ящик. Выберите время суток, когда Вы хотели бы получать электронную почту, а также перевод Библии, который Вам нравится больше всего.
+    email delivery text:                        "Включите доставку электронной почты, если хотите ежедневно получать содержимое плана чтения на свой почтовый ящик. Выберите время суток, когда Вы хотели бы получать электронную почту, а также перевод Библии, который Вам нравится больше всего."
     email delivery:                             "Отсылка писем на эл. почту"
     morning:                                    "Утро"
     afternoon:                                  "День"
@@ -521,16 +523,28 @@ en:
     all versions:                               "Все переводы на %{language_name}"
   donate:
     donate now:                                 "Пожертвование"
+    donate now intl:                            ""
     promo 1:                                    "Каждый пожертвованный Вами доллар поможет 10-и людям получить Библию на мобильное устройство."
     promo 2:                                    "С YouVersion Библия всегда рядом. Посмотреть видео."
     promo 3:                                    "В этом году более 5 миллиардов человек будут пользоваться мобильными телефонами. Сделать пожертвование."
     headline:                                   Всем необходимо Слово Божие.
     subhead:                                    "Помогите людям по всему миру получить доступ к Библии."
     copy:                                       "Представьте, что Вы могли бы дать каждому человеку в мире бесплатную Библию. Жертвуя в пользу YouVersion, Вы способствуете именно этому. Мы живём в то время, о котором другие могли только мечтать — когда любой из нас, имея мобильный телефон, может легко получить доступ к Библии и познакомиться с историей любви Бога к нам."
+    amount:                                     ""
+    name:                                       ""
+    card number:                                ""
+    card exp date:                              ""
+    receipt:                                    ""
+    preview:                                    ""
+    header copy:                                ""
+    header confirm copy:                        ""
+    donate now button:                          ""
+    email header:                               ""
+    email footer:                               ""
   download ad:
     title:                                      "Загрузить бесплатное приложение Библия"
     line 1:                                     "Сотни переводов на множестве"
-    line 2:                                     различных языков — Библия,
+    line 2:                                     "различных языков — Библия,"
     line 3:                                     "которая везде с тобой."
     download:                                   "Загрузить сейчас"
   about page:
@@ -583,7 +597,7 @@ en:
     t2:                                         "Отличная программа!"
     t2 copy:                                    "Это приложение помогает мне читать Слово Божие гораздо более последовательно и держит меня на пути каждый день. Оно легко в использовании и предлагает множество функций ... Мне очень нравится!"
     t3:                                         "Великолепное приложение."
-    t3 copy:                                    Отличное приложение с широким набором Библий, из которых каждый может выбрать подходящую для себя. ... Аудио Библии тоже великолепны и воспринимаются легко.
+    t3 copy:                                    "Отличное приложение с широким набором Библий, из которых каждый может выбрать подходящую для себя. ... Аудио Библии тоже великолепны и воспринимаются легко."
     iphone ipad:                                "iPhone/iPad"
     android:                                    "Android"
     blackberry:                                 "BlackBerry"
