--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -170,6 +170,7 @@ en:
     select another chapter:                     "Wähle ein anderes Kapitel"
     view in reader:                             "Lies %{reference} in der Leseansicht"
   users:
+    no connection friends:                      ""
     creation form errors:                       "Aufgrund des folgenden Fehlers konnte dein Konto nicht angelegt werden:"
     profile form errors:                        "Aufgrund des folgenden Fehlers konnte dein Profil nicht aktualisiert werden:"
     email address:                              "E-Mail-Adresse"
@@ -239,7 +240,7 @@ en:
       your information title:                   "Informationen, die du gibst"
       your information text:                    "Wenn du dich bei YouVersion registrierst, oder bei einem anderen LifeChurch.tv Service oder Unterstützung, die Registrierung erfordern, fragen wir dich nach persönlichen Informationen (wie Name, Email-Adresse und ein Konto-Passwort). Wir können diese Informationen, die du mit deinem Konto übermittelst, mit Informationen anderer LifeChurch.tv Services oder Dritten zusammenführen, um dir eine bessere Erfahrung zu ermöglichen oder die Qualität unserer Services zu verbessern. Für bestimmte Services können wir dich entscheiden lassen, ob du diese Zusammenführung der Informationen zulassen willst."
       device id title:                          "Eindeutige Geräte ID"
-      device id text:                           Wenn du auf die YouVersion Bible App zugreifst, können wir deine eindeutige Geräte ID (*IMEI*) und/oder die IP Adresse ermitteln. Wir nutzen deine IMEI, um einen maßgeschneiderten Ablauf für dich zu erzeugen. Die IMEI-Daten werden erfasst, um die Gesamtzahl von Einzelgeräten zu bestimmen, die unseren Service oder Teile unseres Services nutzen, um die gesamte Nutzung nachzuverfolgen, Daten zu analysieren und effektiver mit dir zu kommunizieren. Wir können deine IMEI mit Daten von Dritten zusammenführen, damit du persönlich mehr Nutzen von VY hast und damit wir die Qualität unseres Services verbessern können. Wir geben keine Daten an Dritte weiter, die dich persönlich mit deiner IMEI in Verbindung bringen.  
+      device id text:                           "Wenn du auf die YouVersion Bible App zugreifst, können wir deine eindeutige Geräte ID (*IMEI*) und/oder die IP Adresse ermitteln. Wir nutzen deine IMEI, um einen maßgeschneiderten Ablauf für dich zu erzeugen. Die IMEI-Daten werden erfasst, um die Gesamtzahl von Einzelgeräten zu bestimmen, die unseren Service oder Teile unseres Services nutzen, um die gesamte Nutzung nachzuverfolgen, Daten zu analysieren und effektiver mit dir zu kommunizieren. Wir können deine IMEI mit Daten von Dritten zusammenführen, damit du persönlich mehr Nutzen von VY hast und damit wir die Qualität unseres Services verbessern können. Wir geben keine Daten an Dritte weiter, die dich persönlich mit deiner IMEI in Verbindung bringen."  
       cookies title:                            "LifeChurch.tv Cookies"
       cookies text:                             "Wenn du %{link} besuchst, können wir ein oder mehrere Cookies an deinen Computer senden, damit wir deinen Browser eindeutig identifizieren können. (Ein Cookie ist einfach eine kleine Text-Datei, die eine Zeichenfolge enthält.) Durch das Akzeptieren unserer Cookies ist es dir möglich, deine Nutzereinstellung von Sitzung zu Sitzung beizubehalten. Obwohl die meisten Browser Cookies standardmäßig zulassen, kannst du deinen Browser so einstellen, dass er alle Cookies ablehnt oder dich informiert, wenn ein Cookie gesendet wird. Manche YouVersion-Funktionen funktionieren möglicherweise nicht richtig, wenn Cookies deaktiviert sind."   
       log title:                                "Log-Informationen"
@@ -366,6 +367,7 @@ en:
     user badges:                                "Abzeichen von %{user}"
   plans:
     title:                                      "Lesepläne"
+    browse by category:                         ""
     browse plans:                               "%{category}-Lesepläne anschauen"
     all:                                        "Alle"
     all plans:                                  "Alle Lesepläne"
@@ -424,7 +426,7 @@ en:
     search members:                             "Suche"
     email_on:                                   "Versand aktivieren"
     email_off:                                  "Versand deaktivieren"
-    email delivery text:                        Aktiviere den Versand, wenn du deine Lesung täglich per Email erhalten willst. Wähle die gewünschte Uhrzeit für das Eintreffen der Email und deine bevorzugte Bibelversion.
+    email delivery text:                        "Aktiviere den Versand, wenn du deine Lesung täglich per Email erhalten willst. Wähle die gewünschte Uhrzeit für das Eintreffen der Email und deine bevorzugte Bibelversion."
     email delivery:                             "Email-Versand"
     morning:                                    "Morgens"
     afternoon:                                  "Nachmittags"
@@ -477,16 +479,28 @@ en:
     all versions:                               "Alle %{language_name}en Versionen"
   donate:
     donate now:                                 "Jetzt spenden"
+    donate now intl:                            ""
     promo 1:                                    "Für jeden Euro den du spendest, können noch 10 Leute mehr mit ihrem Handy auf die Bibel zugreifen."
     promo 2:                                    "Mit YouVersion ist die Bibel immer in der Nähe. Schau unser Video an."
     promo 3:                                    "In diesem Jahr werden über 5 Milliarden Menschen ein Handy verwenden. Spende jetzt."
     headline:                                   Jeder braucht das Wort Gottes.
     subhead:                                    "Hilf den Menschen weltweit, die Bibel immer zur Hand haben zu können."
     copy:                                       "Stell dir vor, du könntest jedem auf der Welt kostenlos eine Bibel geben. Wenn du Geld für YouVersion spendest, kannst du genau das tun. Wir leben in einer Zeit, von der andere nur träumen konnten &ndash; eine Zeit, in der jeder mit einem Handy auf die Bibel zugreifen und die Geschichte von Gottes Liebe für uns erleben kann. Mit deiner Unterstützung können wir weiterhin dafür sorgen, dass mehr Menschen mehr Zeit damit verbringen, in der Heiligen Schrift zu lesen."
+    amount:                                     ""
+    name:                                       ""
+    card number:                                ""
+    card exp date:                              ""
+    receipt:                                    ""
+    preview:                                    ""
+    header copy:                                ""
+    header confirm copy:                        ""
+    donate now button:                          ""
+    email header:                               ""
+    email footer:                               ""
   download ad:
     title:                                      "Lade dir die gratis Bibel App herunter"
     line 1:                                     "Hunderte Versionen in vielen"
-    line 2:                                     verschiedenen Sprachen—die Bibel, die
+    line 2:                                     "verschiedenen Sprachen—die Bibel, die"
     line 3:                                     "du überall hin mitnehmen kannst."
     download:                                   "Jetzt herunterladen"
   about page:
@@ -539,7 +553,7 @@ en:
     t2:                                         "Tolles Programm!"
     t2 copy:                                    "Diese App hilft mir dabei, organisiert zu bleiben und Gottes Wort jeden Tag zu lesen. Sie ist einfach zu bedienen und bietet viele Funktionen ... Ich liebe sie!"
     t3:                                         "Wunderbare App."
-    t3 copy:                                    Großartige App mit einer tollen Auswahl an Bibeln...  Die Hörbibeln sind auch prima und gut zu verstehen.
+    t3 copy:                                    "Großartige App mit einer tollen Auswahl an Bibeln...  Die Hörbibeln sind auch prima und gut zu verstehen."
     iphone ipad:                                "iPhone/iPad"
     android:                                    "Android"
     blackberry:                                 "BlackBerry"
