--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -170,6 +170,7 @@ en:
     select another chapter:                     "Välj ett annat kapitel"
     view in reader:                             "Visa %{reference} i läsare"
   users:
+    no connection friends:                      ""
     creation form errors:                       "Följande fel förhindrade skapandet av ditt konto:"
     profile form errors:                        "Följande fel förhindrade uppdateringen av din profil:"
     email address:                              "E-postadress"
@@ -239,7 +240,7 @@ en:
       your information title:                   "Information du lämnar"
       your information text:                    "När du registrerar dig för ett YouVersion-konto, annan LifeChurch.tv-tjänst eller erbjudande som kräver registrering ber vi om personlig information (som ditt namn, e-postadress och ett lösenord). Vi kanske kombinera informationen du skickar under ditt konto med information från andra LifeChurch.tv-tjänster eller en tredje part för att ge dig en bättre upplevelse och förbättra kvalitén på vår tjänst. För vissa tjänster kommer vi kanske låta dig välja bort att kombinera sådan information."
       device id title:                          "Unikt ID på enheten"
-      device id text:                           När du använder YouVersions Bibelapplikation kan vi samla in ditt unika ID på din enhet ("UDID") och/eller IP-adress. Vi använder ditt UDID för att erbjuda en skräddarsydd upplevelse till dig. UDID-informationen samlas in för att bestämma det sammanlagda antal unika enheter som använder vår tjänst eller delar av vår tjänst för att följa totalt användning, analysera data och kommunicera med dig mer effektivt. Vi kan kombinera ditt UDID med information från tredje part för att erbjuda dig bättre upplevelse och för att förbättra kvalitén på vår tjänst. Vi sprider inte någon personligt identifierbar information till tredje part associerat med ditt UDID.  
+      device id text:                           "När du använder YouVersions Bibelapplikation kan vi samla in ditt unika ID på din enhet (\"UDID\") och/eller IP-adress. Vi använder ditt UDID för att erbjuda en skräddarsydd upplevelse till dig. UDID-informationen samlas in för att bestämma det sammanlagda antal unika enheter som använder vår tjänst eller delar av vår tjänst för att följa totalt användning, analysera data och kommunicera med dig mer effektivt. Vi kan kombinera ditt UDID med information från tredje part för att erbjuda dig bättre upplevelse och för att förbättra kvalitén på vår tjänst. Vi sprider inte någon personligt identifierbar information till tredje part associerat med ditt UDID."  
       cookies title:                            "LifeChurch.tv-cookies"
       cookies text:                             "När du besöker %{link} kan vi skicka en eller flera cookies till din dator så att vi unikt identifiera din webbläsare. (En cookie är helt enkelt en liten textfil innehållandes en rad med tecken.) Genom att acceptera våra cookies kan du spara dina inställningar från session till session. Även om de flesta webbläsare normalt acceptera cookies kan du ställa in din webbläsare att neka alla cookies eller berätta för dig när du har fått en cookies. Några YouVersion-funktioner och -tjänster kanske inte fungerar ordentligt om du har cookies avaktiverat."   
       log title:                                "Logginformation"
@@ -366,6 +367,7 @@ en:
     user badges:                                "%{user}s emblem"
   plans:
     title:                                      "Läsplaner"
+    browse by category:                         ""
     browse plans:                               "Bläddra planer i %{category}"
     all:                                        "Alla"
     all plans:                                  "Alla planer"
@@ -424,7 +426,7 @@ en:
     search members:                             "Sök"
     email_on:                                   "Sätt på leverans"
     email_off:                                  "Stäng av leverans"
-    email delivery text:                        Aktivera e-postleverans om du vill få din dagliga text från läsplanen till din inkorg. Välj tid på dagen du vill få e-posten och Bibelöversättning som fungerar bäst för dig.
+    email delivery text:                        "Aktivera e-postleverans om du vill få din dagliga text från läsplanen till din inkorg. Välj tid på dagen du vill få e-posten och Bibelöversättning som fungerar bäst för dig."
     email delivery:                             "E-postleverans"
     morning:                                    "Morgon"
     afternoon:                                  "Eftermiddag"
@@ -477,16 +479,28 @@ en:
     all versions:                               "Alla %{language_name} översättningar"
   donate:
     donate now:                                 "Donera nu"
+    donate now intl:                            ""
     promo 1:                                    "För varje $1 du ger kommer ytterligare 10 personer få tillgång till Bibeln på sina mobiltelefoner."
     promo 2:                                    "Med YouVersion är Bibeln alltid nära. Titta på vår video."
     promo 3:                                    "I år kommer över 5 miljarder människor använda en mobiltelefon. Donera nu."
     headline:                                   Alla behöver Guds Ord.
     subhead:                                    "Hjälp människor runt hela värden att komma i kontakt med Bibeln."
     copy:                                       "Tänk om du kunde ge alla i världen en gratis bibel. När du ger till YouVersion kan du göra just det. Vi lever i en tid som andra bara kunnat drömma om &ndash; när någon med en telefon kan komma åt Bibeln och uppleva berättelsen om Guds kärlek till oss. Med ditt stöd kan vi fortsätta att hjälpa fler människor tillbringa mer tid i Skriften."
+    amount:                                     ""
+    name:                                       ""
+    card number:                                ""
+    card exp date:                              ""
+    receipt:                                    ""
+    preview:                                    ""
+    header copy:                                ""
+    header confirm copy:                        ""
+    donate now button:                          ""
+    email header:                               ""
+    email footer:                               ""
   download ad:
     title:                                      "Ladda ner den fria Bibelappen"
     line 1:                                     "Hundratals översättningar på många"
-    line 2:                                     olika språk—Bibeln som
+    line 2:                                     "olika språk—Bibeln som"
     line 3:                                     "följer med dig överallt."
     download:                                   "Ladda ner nu"
   about page:
@@ -539,7 +553,7 @@ en:
     t2:                                         "Fantastiskt program!"
     t2 copy:                                    "Denna app hjälper mig att hålla mig organiserad och läsa Guds Ord varje dag. Den är enkel att använda och erbjuder många finesser...Älskar den!"
     t3:                                         "Fantastisk app."
-    t3 copy:                                    Utmärkt app med en bred samling av Biblar att välja från. ... Ljudbibeln är också underbar och enkelt att förstå.
+    t3 copy:                                    "Utmärkt app med en bred samling av Biblar att välja från. ... Ljudbibeln är också underbar och enkelt att förstå."
     iphone ipad:                                "iPhone/iPad"
     android:                                    "Android"
     blackberry:                                 "BlackBerry"
